# libparoli-rknn

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.note  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: Findonnxruntime.cmake
examples/: demo_streaming.cpp
include/libparoli-rknn/: audio_chunk.hpp  audio_sink.hpp  backend.hpp  c_api.h  cxx_api.h  model_config.hpp  phonemizer.hpp  session_options.hpp  streaming_synthesizer.hpp
src/: audio_chunk.cpp  audio_sink.cpp  backend_factory.cpp  c_api.cpp  model_config.cpp  phonemizer.cpp  session_options.cpp  streaming_synthesizer.cpp
src/backends/: null_backend.cpp  onnx_backend.cpp  rknn_backend.cpp
